--- a/VRChat/35/1324435.html
+++ b/VRChat/35/1324435.html
@@ -81,7 +81,7 @@
     <script src=
     "https://asset.booth.pm/assets/23738a784829eea36de7.js" defer=
     "defer" nonce=
-    "iL0FfrDjbcdzTw1NXK3WwceFkVy7OXExtK72hHGoOcE="></script>
+    "mbGpcTHuk6UmMtfpvn5V81l6sTCgybh3fmCtiVJMv3Q="></script>
     <script type="application/ld+json">
     {"@context":"https://schema.org","@type":"Product","name":"【MMD】【VRC】リアル骸骨モデル","description":"リアルな人体骨格の3DCGモデルです。\n昔モデリングだけしてた素材にボーンとか入れて完成させたものになります。\n\n\n\n◆形式\n・MMD用のPMXファイル、\n・Unity用のFBXファイル、\n・VRChat用のUnityパッケージ、\n・メタセコイア用のMQOファイル\nが入っています。\nボーン形式はHumanoid形式です。\n\nそのままMMDで踊れるしVRCで使えます。\n\n\n\n◆テクスチャ\n２Kの解像度のテクスチャとノーマルマップが入っています。\n\nhttps://byneet.fanbox.cc/posts/3093307\nMMDモデルにノーマルマップを適用する方法についてはここを参考にしてください\n\n\n\n◆ポリゴン数\n４角ポリゴンで２３０００ポリゴン程です。\n\n\n\n◆利用規約\n勝手に再配布以外の行為なら、ゲーム利用、動画利用、\n何をしてくれても多分オッケーです。\n\n（例えばVRCに、モデルをプライベートでアップロードして個人的に楽しむのはOKですが、パブリックでアップロードするのとかはNGです）\n\n\n何か問題があったら教えてください。\n","url":"https://booth.pm/ja/items/1324435","offers":{"priceCurrency":"JPY","@type":"Offer","price":"500"},"image":"https://booth.pximg.net/c/620x620/9b436d1b-ecc9-44b3-a4c7-a14f856c56f0/i/1324435/52d2efc7-3f4e-4ebd-a24c-dd3777b0f725_base_resized.jpg"}
     </script>
@@ -95,7 +95,7 @@
     "//www.googletagmanager.com/ns.html?id=GTM-WLLNDM" style=
     "display:none;visibility:hidden" width="0"></iframe></noscript>
     <script src="https://asset.booth.pm/google_tag_manager_ad.js"
-    nonce="iL0FfrDjbcdzTw1NXK3WwceFkVy7OXExtK72hHGoOcE="></script>
+    nonce="mbGpcTHuk6UmMtfpvn5V81l6sTCgybh3fmCtiVJMv3Q="></script>
     <div class="service-informations">
       <div class="promotion-banner"></div>
     </div>
@@ -458,9 +458,10 @@
     <footer class="footer__menu bg-white">
       <div class=
       "desktop:flex desktop:justify-between desktop:mx-auto desktop:text-center desktop:max-w-[1224px] desktop:my-24 desktop:px-16 mobile:gap-16 mobile:grid mobile:grid-cols-2 mobile:m-16">
-        <a href=
-        "https://booth.pm/anshin_booth_pack_guides"><img srcset=
-        "https://asset.booth.pm/assets/banner-anshin_booth_pack@2x-fcabcd0e43382f4dc4a297dd15a695c9a7041541c945b15d5d8da6315952095a.png 2x"
+        <a href="https://booth.fanbox.cc/posts/6374573"><img alt=
+        "ピクシブかんたん決済のご利用方法" class="align-bottom w-full" width="176"
+        height="72" src=
+        "https://asset.booth.pm/assets/banner-minna_no_ginko_footer-558af5dbd3da52c330c9263a270923d2f773e612606d9c248942b779c9ed541a.jpg"></a><a href="https://booth.pm/anshin_booth_pack_guides"><img srcset="https://asset.booth.pm/assets/banner-anshin_booth_pack@2x-fcabcd0e43382f4dc4a297dd15a695c9a7041541c945b15d5d8da6315952095a.png 2x"
         alt="匿名配送であんしん！あんしんBOOTH便" class="align-bottom w-full"
         width="176" height="72" src=
         "https://asset.booth.pm/assets/banner-anshin_booth_pack-14540be4805dc22307b8c1341662093cca5d0f3d885daf80a896ca7c32e0596f.png"></a><a target="_blank"
