--- a/VRChat/67/1315867.html
+++ b/VRChat/67/1315867.html
@@ -104,7 +104,7 @@
     <script src=
     "https://asset.booth.pm/assets/23738a784829eea36de7.js" defer=
     "defer" nonce=
-    "e2wNT9CqukODY3TzEKyjATevwDwpQQezI4C/1MV8lGs="></script>
+    "3EN7i81BYsMcV/bbH5bDA5pK8dk51eySvyFKOOg3Rhg="></script>
     <script type="application/ld+json">
     {"@context":"https://schema.org","@type":"Product","name":"shah-XXIII","description":"本製品は、VRChat向け、fbx形式の武器モデルです。\n\n\n製品内容\nreadme\nFBXファイル\nテクスチャファイル\nUnityPackage\n\n本体説明\n武器名　shah-XXIII\nポリゴン数：全部品合計1636\nマテリアル数；合計二種（金属部、発光部）\n全長50cmを想定しています。（用途に合わせて変更してください。）\nアニメーションデータなどは入っておりません。\n\n\n使用に関して\n１．著作権は製作者 JUKI に帰属、改変後も JUKI に帰属します\n２．使用禁止事項 ；再配布、改変後の再配布は禁止とします\n\n３．使用可能事項\n改変、営利目的での使用、動画撮影等。\n\n４．免責事項\n　本データを利用による損害に対する責任は追わないものとさせていただきます。\n　特定個人や団体への中傷を目的とした利用を禁止します。\n\n５．連絡\n　データに不備等がございましたらすぐに修正させていただきます。その他不明点等ございましたら、ご連絡お願いいたします。\nTwitter；＠jyukipann \nMail；digitalneet@outlook.jp\n\n６.補足\n　商品画像はレンダリング後の画像です。Unity内のものとはマテリアルが異なります。","url":"https://booth.pm/ja/items/1315867","offers":{"priceCurrency":"JPY","@type":"Offer","price":"100"},"image":"https://booth.pximg.net/c/620x620/446ed4b1-759c-4496-8b4f-27adf077ec67/i/1315867/54614274-ac46-436d-acae-08ab1b1560a2_base_resized.jpg"}
     </script>
@@ -115,7 +115,7 @@
     src="//www.googletagmanager.com/ns.html?id=GTM-WLLNDM" style=
     "display:none;visibility:hidden" width="0"></iframe></noscript>
     <script src="https://asset.booth.pm/google_tag_manager_ad.js"
-    nonce="e2wNT9CqukODY3TzEKyjATevwDwpQQezI4C/1MV8lGs="></script>
+    nonce="3EN7i81BYsMcV/bbH5bDA5pK8dk51eySvyFKOOg3Rhg="></script>
     <div class="service-informations">
       <div class="promotion-banner"></div>
     </div>
@@ -189,7 +189,7 @@
                                   "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                                     <div class=
                                     "typography-14 preserve-half-leading wishlists_count">
-                                      10
+                                      11
                                     </div>
                                   </div></a><a class=
                                   "remove-from-wish-list no-underline !text-current"
@@ -205,7 +205,7 @@
                                   "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                                     <div class=
                                     "typography-14 preserve-half-leading wishlists_count">
-                                      10
+                                      11
                                     </div>
                                   </div></a>
                                 </div>
@@ -419,9 +419,10 @@
     <footer class="footer__menu bg-white">
       <div class=
       "desktop:flex desktop:justify-between desktop:mx-auto desktop:text-center desktop:max-w-[1224px] desktop:my-24 desktop:px-16 mobile:gap-16 mobile:grid mobile:grid-cols-2 mobile:m-16">
-        <a href=
-        "https://booth.pm/anshin_booth_pack_guides"><img srcset=
-        "https://asset.booth.pm/assets/banner-anshin_booth_pack@2x-fcabcd0e43382f4dc4a297dd15a695c9a7041541c945b15d5d8da6315952095a.png 2x"
+        <a href="https://booth.fanbox.cc/posts/6374573"><img alt=
+        "ピクシブかんたん決済のご利用方法" class="align-bottom w-full" width="176"
+        height="72" src=
+        "https://asset.booth.pm/assets/banner-minna_no_ginko_footer-558af5dbd3da52c330c9263a270923d2f773e612606d9c248942b779c9ed541a.jpg"></a><a href="https://booth.pm/anshin_booth_pack_guides"><img srcset="https://asset.booth.pm/assets/banner-anshin_booth_pack@2x-fcabcd0e43382f4dc4a297dd15a695c9a7041541c945b15d5d8da6315952095a.png 2x"
         alt="匿名配送であんしん！あんしんBOOTH便" class="align-bottom w-full"
         width="176" height="72" src=
         "https://asset.booth.pm/assets/banner-anshin_booth_pack-14540be4805dc22307b8c1341662093cca5d0f3d885daf80a896ca7c32e0596f.png"></a><a target="_blank"
