--- a/VRChat/95/1297395.html
+++ b/VRChat/95/1297395.html
@@ -81,7 +81,7 @@
     <script src=
     "https://asset.booth.pm/assets/23738a784829eea36de7.js" defer=
     "defer" nonce=
-    "IV96F2A+CGwhmBhzLE2rPVkr9BYT+AOOylum2JUJU7Y="></script>
+    "kyhXavxE1kTnr2YQC5Gr13QDrX8rPY9D5WveD3fExQY="></script>
     <script type="application/ld+json">
     {"@context":"https://schema.org","@type":"Product","name":"LASER-BLADE","description":"VRChat向け3Dモデル 『LASER-BLADE』\n\n△1938ポリゴン\n\nレーザー式の剣です。出力調整のダイヤルで刀のように細くしたり刀身を収納、延長することができます。また、2つを合わせてより強力にすることもできます。\n\nテクスチャはブラックとシルバー2色のBaseColorがあります。\nまた、Height、Metallic、Roughness、Normalも付属しています。\n\n出力調整とブレードONOFFのダイヤルはそれぞれボーンが入っており、回転させることができます。\n\nシェイプキーは刀身収納、刀身延長、刀身細、レバー可動の4種があります。\n\nマテリアルは本体とレーザー色の2つ、シェーダーはStandardを使用しています。","url":"https://booth.pm/ja/items/1297395","offers":{"priceCurrency":"JPY","@type":"Offer","price":"500"},"image":"https://booth.pximg.net/c/620x620/fd12f873-ecbb-4fe4-973b-3208cf7ebc52/i/1297395/044f083a-d7ac-4319-9b83-e589add0ca10_base_resized.jpg"}
     </script>
@@ -95,7 +95,7 @@
     "//www.googletagmanager.com/ns.html?id=GTM-WLLNDM" style=
     "display:none;visibility:hidden" width="0"></iframe></noscript>
     <script src="https://asset.booth.pm/google_tag_manager_ad.js"
-    nonce="IV96F2A+CGwhmBhzLE2rPVkr9BYT+AOOylum2JUJU7Y="></script>
+    nonce="kyhXavxE1kTnr2YQC5Gr13QDrX8rPY9D5WveD3fExQY="></script>
     <div class="service-informations">
       <div class="promotion-banner"></div>
     </div>
@@ -519,9 +519,10 @@
     <footer class="footer__menu bg-white">
       <div class=
       "desktop:flex desktop:justify-between desktop:mx-auto desktop:text-center desktop:max-w-[1224px] desktop:my-24 desktop:px-16 mobile:gap-16 mobile:grid mobile:grid-cols-2 mobile:m-16">
-        <a href=
-        "https://booth.pm/anshin_booth_pack_guides"><img srcset=
-        "https://asset.booth.pm/assets/banner-anshin_booth_pack@2x-fcabcd0e43382f4dc4a297dd15a695c9a7041541c945b15d5d8da6315952095a.png 2x"
+        <a href="https://booth.fanbox.cc/posts/6374573"><img alt=
+        "ピクシブかんたん決済のご利用方法" class="align-bottom w-full" width="176"
+        height="72" src=
+        "https://asset.booth.pm/assets/banner-minna_no_ginko_footer-558af5dbd3da52c330c9263a270923d2f773e612606d9c248942b779c9ed541a.jpg"></a><a href="https://booth.pm/anshin_booth_pack_guides"><img srcset="https://asset.booth.pm/assets/banner-anshin_booth_pack@2x-fcabcd0e43382f4dc4a297dd15a695c9a7041541c945b15d5d8da6315952095a.png 2x"
         alt="匿名配送であんしん！あんしんBOOTH便" class="align-bottom w-full"
         width="176" height="72" src=
         "https://asset.booth.pm/assets/banner-anshin_booth_pack-14540be4805dc22307b8c1341662093cca5d0f3d885daf80a896ca7c32e0596f.png"></a><a target="_blank"
