--- a/VRChat/74/999974.html
+++ b/VRChat/74/999974.html
@@ -106,7 +106,7 @@
     <script src=
     "https://asset.booth.pm/assets/23738a784829eea36de7.js" defer=
     "defer" nonce=
-    "K2LKkgavmM2WWgNxjv3ZjdSKBShYtbVYuZ7cFnTu2Xg="></script>
+    "fr0Ntkx9sQPP9tGjZFzgWzgftcQvGw5UuY126HY2kaE="></script>
     <script type="application/ld+json">
     {"@context":"https://schema.org","@type":"Product","name":"古びた魔法書 Old magic books","description":"　「古びた魔法書」\n\n３種類の本のセットです\nひらく、ページめくりのシェイプキー付き\n\nVRChat想定のprefab設定済みunitypackage入り\n\nおまけで、魔法陣のPNG画像も入っています。\n魔法のパーティクルなどで使っていただいて構いません。\nその他、服やアイテム等の柄としても使用していただいてOKです。\n\n\n\nポリゴン数：1冊あたり228ポリゴン\n\n\nシェーダーはUnlitWFを設定しています。\nUnlit_WF_ShaderSuite Download\nhttps://github.com/whiteflare/Unlit_WF_ShaderSuite/releases\n\n他のシェーダーを使用する場合、アルファ（透明部分）があるので「Cutout」に設定してください。\n\n\n\n＜アップデート＞\n2020. 4.15　1冊ごとprefabを用意してunitypackageを追加。シェーダーをUnlitWFに変更しました。\n2019. 2.24　テクスチャサイズを変えず、表紙2種類と2ページ追加、シェイプキーの追加をしました。\n\n2018. 9. 6 　少しだけですがテクスチャを修正しました。","url":"https://booth.pm/ja/items/999974","offers":{"priceCurrency":"JPY","@type":"Offer","price":"800"},"image":"https://booth.pximg.net/c/620x620/1f163e5b-a0e4-46e7-be27-4850d72c7bc9/i/999974/14b70dbc-2eda-4592-931c-2fb7ee55dfb9_base_resized.jpg"}
     </script>
@@ -117,7 +117,7 @@
     src="//www.googletagmanager.com/ns.html?id=GTM-WLLNDM" style=
     "display:none;visibility:hidden" width="0"></iframe></noscript>
     <script src="https://asset.booth.pm/google_tag_manager_ad.js"
-    nonce="K2LKkgavmM2WWgNxjv3ZjdSKBShYtbVYuZ7cFnTu2Xg="></script>
+    nonce="fr0Ntkx9sQPP9tGjZFzgWzgftcQvGw5UuY126HY2kaE="></script>
     <div class="service-informations">
       <div class="promotion-banner"></div>
     </div>
@@ -192,7 +192,7 @@
                                   "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                                     <div class=
                                     "typography-14 preserve-half-leading wishlists_count">
-                                      767
+                                      768
                                     </div>
                                   </div></a><a class=
                                   "remove-from-wish-list no-underline !text-current"
@@ -208,7 +208,7 @@
                                   "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                                     <div class=
                                     "typography-14 preserve-half-leading wishlists_count">
-                                      767
+                                      768
                                     </div>
                                   </div></a>
                                 </div>
@@ -502,9 +502,10 @@
     <footer class="footer__menu bg-white">
       <div class=
       "desktop:flex desktop:justify-between desktop:mx-auto desktop:text-center desktop:max-w-[1224px] desktop:my-24 desktop:px-16 mobile:gap-16 mobile:grid mobile:grid-cols-2 mobile:m-16">
-        <a href=
-        "https://booth.pm/anshin_booth_pack_guides"><img srcset=
-        "https://asset.booth.pm/assets/banner-anshin_booth_pack@2x-fcabcd0e43382f4dc4a297dd15a695c9a7041541c945b15d5d8da6315952095a.png 2x"
+        <a href="https://booth.fanbox.cc/posts/6374573"><img alt=
+        "ピクシブかんたん決済のご利用方法" class="align-bottom w-full" width="176"
+        height="72" src=
+        "https://asset.booth.pm/assets/banner-minna_no_ginko_footer-558af5dbd3da52c330c9263a270923d2f773e612606d9c248942b779c9ed541a.jpg"></a><a href="https://booth.pm/anshin_booth_pack_guides"><img srcset="https://asset.booth.pm/assets/banner-anshin_booth_pack@2x-fcabcd0e43382f4dc4a297dd15a695c9a7041541c945b15d5d8da6315952095a.png 2x"
         alt="匿名配送であんしん！あんしんBOOTH便" class="align-bottom w-full"
         width="176" height="72" src=
         "https://asset.booth.pm/assets/banner-anshin_booth_pack-14540be4805dc22307b8c1341662093cca5d0f3d885daf80a896ca7c32e0596f.png"></a><a target="_blank"
