--- a/VRChat/33/1334533.html
+++ b/VRChat/33/1334533.html
@@ -107,7 +107,7 @@
     <script src=
     "https://asset.booth.pm/assets/23738a784829eea36de7.js" defer=
     "defer" nonce=
-    "zrToR4dmjpt6UovJPylmLliVa6C2mjiYptKzzy8eJ28="></script>
+    "v/gk7oB9jvanBEYS8b7sd1Df88WRgX7ccIoBiUiIQ0Y="></script>
     <script type="application/ld+json">
     {"@context":"https://schema.org","@type":"Product","name":"VRchat向け『仕込みブレード』392ポリゴン ☆2種追加しました","description":"更新履歴\n\n4/29　仕込みブレードのバリエーションを2種追加しました。\n\n-----------------\n\n\n『袖の中に隠せるほど小さく、両手を使うこともなく切り裂くことのできる武器があるとすれば最高の暗殺者になれることでしょう。この仕込みブレードは遥か昔から時代の闇の中で使い続けられてきたものを参考に作られました。なお、ブレードを展開した際に自身の指を切ってしまうという評価が多数届いているため、あらかじめ薬指を切断しておくことをオススメします。』\n\n\n-----------------\n\n\n\nこの度はUltraGunsAtomicのモデルをご覧いただき誠にありがとうございます。\nこちらのモデルは主にVRchat向けに制作されております。それ以外の利用については想定されておりません。\n\n\n\n-----------------\n\n\n\n『内容物』\n\n\n・fbxモデル\n仕込みブレード 392ポリゴン\nシェイプキーでブレードの展開と、ブレード幅の調整が可能です。\n腕の下に取り付けることを想定して作られているため、初めからひっくり返っています。\n\n\n・unitypackage\nこちらをunityにドラッグ\u0026ドロップするだけで導入できます。\nunityに導入するとフォルダ内にテクスチャ、FBX、設定済みマテリアル、設定済みプレハブ、サンプルアニメーションが入っています。\nサンプルアニメーションはアバターに仕込んだ際のブレードの展開の参考にお使いください。\n\n-----------------\n\n\n\n『利用規約』\n\n\n\n【許可】\n\n・VRchat内での使用(アバターに持たせる・ワールドのオブジェクト・VRchatのゲームに組み込む等)\n\n・データ、モデルの改変(なお、改変されたモデルにも本規約は適応されます。)\n\n・動画制作(営利・非営利は問いませんが、一報頂けると嬉しいです。)\n\n・R-18、R-18Gの利用\n\n・イラストなどへの参考、トレス等への利用。\n\n・利用者自身が使用できる形で本モデルが使用されたアバターのVRchat内へのアップロード（本モデルが使用されたアバターペデスタルへのアップロードは許可します）\n\n\n-----------------\n\n\n\n【禁止】\n\n・名誉棄損、法律に反する反社会的行為、悪意を持った差別的な意図で本モデルを使用。\n\n・自作発言（本モデルを改変し利用している等の発言は問題ありません）\n\n・本モデルの無許可の再配布、販売（改変したモデル含む）\n\n・このモデルを使用した嫌がらせ行為（嫌がる相手に斬りかかる等）\n\n\nなお、禁止事項に違反した場合、制作者はいつでも利用を差し止めできるものとします。\n\n\n\n-----------------\n\n\n\n【注意】\nこのモデルはVRchatでの使用を想定しています。それ以外での使用により発生した障害、事故、トラブルについては一切の責任を負えません。\nまた、このモデルに関していかなる保証も行いません。\nまた、このモデルを使用しVRchat内で発生したトラブル、障害、事故についても一切責任を負えません。\n\nこのモデルを利用した時点で以上の規約に同意することとなりますので、今一度しっかりと目をお通し下さい。\n\n\n\n-----------------\n\n\n\n本規約、本データについて分からないことや疑問、違和感や不具合などがございましたらお気軽にご連絡ください。\n\n\n\nVRchat；UGA_IYU\n\nTwitter；@uga_IYU\n\nbooth；https://ultragunsatomic.booth.pm/\n\nモデル制作者；う゛","url":"https://booth.pm/ja/items/1334533","offers":{"priceCurrency":"JPY","@type":"Offer","price":"500"},"image":"https://booth.pximg.net/c/620x620/2aaf8e6b-f522-4f3e-818f-90223f1e4947/i/1334533/60f891c6-5637-43f4-82a7-6427548c4f81_base_resized.jpg"}
     </script>
@@ -118,7 +118,7 @@
     src="//www.googletagmanager.com/ns.html?id=GTM-WLLNDM" style=
     "display:none;visibility:hidden" width="0"></iframe></noscript>
     <script src="https://asset.booth.pm/google_tag_manager_ad.js"
-    nonce="zrToR4dmjpt6UovJPylmLliVa6C2mjiYptKzzy8eJ28="></script>
+    nonce="v/gk7oB9jvanBEYS8b7sd1Df88WRgX7ccIoBiUiIQ0Y="></script>
     <div class="service-informations">
       <div class="promotion-banner"></div>
     </div>
@@ -478,9 +478,10 @@
     <footer class="footer__menu bg-white">
       <div class=
       "desktop:flex desktop:justify-between desktop:mx-auto desktop:text-center desktop:max-w-[1224px] desktop:my-24 desktop:px-16 mobile:gap-16 mobile:grid mobile:grid-cols-2 mobile:m-16">
-        <a href=
-        "https://booth.pm/anshin_booth_pack_guides"><img srcset=
-        "https://asset.booth.pm/assets/banner-anshin_booth_pack@2x-fcabcd0e43382f4dc4a297dd15a695c9a7041541c945b15d5d8da6315952095a.png 2x"
+        <a href="https://booth.fanbox.cc/posts/6374573"><img alt=
+        "ピクシブかんたん決済のご利用方法" class="align-bottom w-full" width="176"
+        height="72" src=
+        "https://asset.booth.pm/assets/banner-minna_no_ginko_footer-558af5dbd3da52c330c9263a270923d2f773e612606d9c248942b779c9ed541a.jpg"></a><a href="https://booth.pm/anshin_booth_pack_guides"><img srcset="https://asset.booth.pm/assets/banner-anshin_booth_pack@2x-fcabcd0e43382f4dc4a297dd15a695c9a7041541c945b15d5d8da6315952095a.png 2x"
         alt="匿名配送であんしん！あんしんBOOTH便" class="align-bottom w-full"
         width="176" height="72" src=
         "https://asset.booth.pm/assets/banner-anshin_booth_pack-14540be4805dc22307b8c1341662093cca5d0f3d885daf80a896ca7c32e0596f.png"></a><a target="_blank"
