--- a/VRChat/08/1334508.html
+++ b/VRChat/08/1334508.html
@@ -79,7 +79,7 @@
     <script src=
     "https://asset.booth.pm/assets/23738a784829eea36de7.js" defer=
     "defer" nonce=
-    "ZFg/B7uqlrBchnBITIJfexrBuSiySzFS9no/ttd3Wio="></script>
+    "PDkcyAXvSLP9r73ap9jhFAMaFoZZt7+v5cZT6zf6OLA="></script>
     <script type="application/ld+json">
     {"@context":"https://schema.org","@type":"Product","name":"ゆめかわブルゾン","description":"特筆事項\n●「ふぃぎゅあばたー」での利用可能　https://gitlab.com/figureavatar/figureavatar/\n●「『それなり～の』アバターフィギュア」での利用可能　http://htc.hotaru-printing.com/Avatar3dfbx.html\n\n■ご利用方法\n使いたいアバターのProjectに当unitypackageをインポート。\nPrefabをヒエラルキーにD\u0026Dしサイズと位置を合わせてアバターのArmatureのボーン下にそれぞれ入れて下さい。\n※必ずバックアップを取ってから作業して下さい。\n\n■詳細\nポリゴン数（三角面）：9968\nシェーダー：UTS2.0.7を同梱、設定してあります。\n\n■利用に際して\n\nTo English speaking people.\nThis data can be remodeled, good for commercial use, do not redistribute.\n\n■免責事項\n当3Dモデルに起因または関連する、使用またはその他の扱いによって生じる一切の請求、損害、その他の義務について何らの責任も負いません。\n\n\n■お問い合わせ\nBOOTHのメッセージ機能よりお願いいたします。\n\n制作：黒井\n2019/4/27\nver1.1","url":"https://booth.pm/ja/items/1334508","offers":{"priceCurrency":"JPY","@type":"Offer","price":"1000"},"image":"https://booth.pximg.net/c/620x620/3101f45b-b262-485c-a1a1-3d2a8da33466/i/1334508/56cc613d-67eb-48ce-95cb-c1d4767a7c69_base_resized.jpg"}
     </script>
@@ -93,7 +93,7 @@
     "//www.googletagmanager.com/ns.html?id=GTM-WLLNDM" style=
     "display:none;visibility:hidden" width="0"></iframe></noscript>
     <script src="https://asset.booth.pm/google_tag_manager_ad.js"
-    nonce="ZFg/B7uqlrBchnBITIJfexrBuSiySzFS9no/ttd3Wio="></script>
+    nonce="PDkcyAXvSLP9r73ap9jhFAMaFoZZt7+v5cZT6zf6OLA="></script>
     <div class="service-informations">
       <div class="promotion-banner"></div>
     </div>
@@ -445,9 +445,10 @@
     <footer class="footer__menu bg-white">
       <div class=
       "desktop:flex desktop:justify-between desktop:mx-auto desktop:text-center desktop:max-w-[1224px] desktop:my-24 desktop:px-16 mobile:gap-16 mobile:grid mobile:grid-cols-2 mobile:m-16">
-        <a href=
-        "https://booth.pm/anshin_booth_pack_guides"><img srcset=
-        "https://asset.booth.pm/assets/banner-anshin_booth_pack@2x-fcabcd0e43382f4dc4a297dd15a695c9a7041541c945b15d5d8da6315952095a.png 2x"
+        <a href="https://booth.fanbox.cc/posts/6374573"><img alt=
+        "ピクシブかんたん決済のご利用方法" class="align-bottom w-full" width="176"
+        height="72" src=
+        "https://asset.booth.pm/assets/banner-minna_no_ginko_footer-558af5dbd3da52c330c9263a270923d2f773e612606d9c248942b779c9ed541a.jpg"></a><a href="https://booth.pm/anshin_booth_pack_guides"><img srcset="https://asset.booth.pm/assets/banner-anshin_booth_pack@2x-fcabcd0e43382f4dc4a297dd15a695c9a7041541c945b15d5d8da6315952095a.png 2x"
         alt="匿名配送であんしん！あんしんBOOTH便" class="align-bottom w-full"
         width="176" height="72" src=
         "https://asset.booth.pm/assets/banner-anshin_booth_pack-14540be4805dc22307b8c1341662093cca5d0f3d885daf80a896ca7c32e0596f.png"></a><a target="_blank"
