--- a/VRChat/77/1334177.html
+++ b/VRChat/77/1334177.html
@@ -81,7 +81,7 @@
     <script src=
     "https://asset.booth.pm/assets/23738a784829eea36de7.js" defer=
     "defer" nonce=
-    "MLYPjj8GYVFqADxcO63fodNWzn8NDJ96VS2Qu7oiKm4="></script>
+    "O769PiirdzGhSPc3x3rtkUNpbi1mkeZCgaD89LiDxcQ="></script>
     <script type="application/ld+json">
     {"@context":"https://schema.org","@type":"Product","name":"(無料配布)『三色帽章』","description":"フランス革命のシンボルでもある三色帽章の3Dモデルです。パパっと作ったものなので無料です。\n\n\n自作発言、他人を意図して不快にさせる使用、その他製作者が不快に感じた使用以外はすべてOKです。\n\n商用、再配布などもご自由にどうぞ。\n\n\n製作者 う゛(うがー)","url":"https://booth.pm/ja/items/1334177","offers":{"priceCurrency":"JPY","@type":"AggregateOffer","lowPrice":"0","highPrice":"100"},"image":"https://booth.pximg.net/c/620x620/2aaf8e6b-f522-4f3e-818f-90223f1e4947/i/1334177/33a40ba5-6600-4202-be23-6fd970630b27_base_resized.jpg"}
     </script>
@@ -95,7 +95,7 @@
     "//www.googletagmanager.com/ns.html?id=GTM-WLLNDM" style=
     "display:none;visibility:hidden" width="0"></iframe></noscript>
     <script src="https://asset.booth.pm/google_tag_manager_ad.js"
-    nonce="MLYPjj8GYVFqADxcO63fodNWzn8NDJ96VS2Qu7oiKm4="></script>
+    nonce="O769PiirdzGhSPc3x3rtkUNpbi1mkeZCgaD89LiDxcQ="></script>
     <div class="service-informations">
       <div class="promotion-banner"></div>
     </div>
@@ -426,9 +426,10 @@
     <footer class="footer__menu bg-white">
       <div class=
       "desktop:flex desktop:justify-between desktop:mx-auto desktop:text-center desktop:max-w-[1224px] desktop:my-24 desktop:px-16 mobile:gap-16 mobile:grid mobile:grid-cols-2 mobile:m-16">
-        <a href=
-        "https://booth.pm/anshin_booth_pack_guides"><img srcset=
-        "https://asset.booth.pm/assets/banner-anshin_booth_pack@2x-fcabcd0e43382f4dc4a297dd15a695c9a7041541c945b15d5d8da6315952095a.png 2x"
+        <a href="https://booth.fanbox.cc/posts/6374573"><img alt=
+        "ピクシブかんたん決済のご利用方法" class="align-bottom w-full" width="176"
+        height="72" src=
+        "https://asset.booth.pm/assets/banner-minna_no_ginko_footer-558af5dbd3da52c330c9263a270923d2f773e612606d9c248942b779c9ed541a.jpg"></a><a href="https://booth.pm/anshin_booth_pack_guides"><img srcset="https://asset.booth.pm/assets/banner-anshin_booth_pack@2x-fcabcd0e43382f4dc4a297dd15a695c9a7041541c945b15d5d8da6315952095a.png 2x"
         alt="匿名配送であんしん！あんしんBOOTH便" class="align-bottom w-full"
         width="176" height="72" src=
         "https://asset.booth.pm/assets/banner-anshin_booth_pack-14540be4805dc22307b8c1341662093cca5d0f3d885daf80a896ca7c32e0596f.png"></a><a target="_blank"
