--- a/VRChat/62/1334162.html
+++ b/VRChat/62/1334162.html
@@ -81,7 +81,7 @@
     <script src=
     "https://asset.booth.pm/assets/23738a784829eea36de7.js" defer=
     "defer" nonce=
-    "pUDhDdN2oEOPVID9RYzXckLmchWa4dnuks/esz0UcJ4="></script>
+    "+fHAMLlAQANjMHcDByOpYmhM9IEY81c3gZHNArC6Xzk="></script>
     <script type="application/ld+json">
     {"@context":"https://schema.org","@type":"Product","name":"３Dモデル　ツインテール(ボーン入り)","description":"髪とリボンにボーンが入ってます。\n\n■使用方法\n\nunitypackageをインポートするとUnity sceneファイルがあるので、そちらを読み込むとツインテールのサンプルが読み込まれます 。\nunity初心者の方はご活用いただければ幸いです\n\n\n■利用規約\n\n本モデルの再配布や販売を禁止します。\n公序良俗に反する行為や他者に対する誹謗中傷目的での利用を禁止します。\n改変は自由にしていただいてかまいません。\n\n\n■シェーダーについて\n\nsynqark様のArktoon-Shadersを同封させていただいております。\n\n\n■免責事項\n\n本モデルデータを利用したことによる金銭的損失、損害、トラブルが発生した場合でも\n当方は一切の責任を負いません。","url":"https://booth.pm/ja/items/1334162","offers":{"priceCurrency":"JPY","@type":"Offer","price":"300"},"image":"https://booth.pximg.net/c/620x620/0ca6621a-65cb-44ff-b3e9-dd068dd9a71c/i/1334162/d4006c32-5305-4aa7-9120-a5657f936e87_base_resized.jpg"}
     </script>
@@ -95,7 +95,7 @@
     "//www.googletagmanager.com/ns.html?id=GTM-WLLNDM" style=
     "display:none;visibility:hidden" width="0"></iframe></noscript>
     <script src="https://asset.booth.pm/google_tag_manager_ad.js"
-    nonce="pUDhDdN2oEOPVID9RYzXckLmchWa4dnuks/esz0UcJ4="></script>
+    nonce="+fHAMLlAQANjMHcDByOpYmhM9IEY81c3gZHNArC6Xzk="></script>
     <div class="service-informations">
       <div class="promotion-banner"></div>
     </div>
@@ -170,7 +170,7 @@
                                   "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                                     <div class=
                                     "typography-14 preserve-half-leading wishlists_count">
-                                      1212
+                                      1211
                                     </div>
                                   </div></a><a class=
                                   "remove-from-wish-list no-underline !text-current"
@@ -186,7 +186,7 @@
                                   "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                                     <div class=
                                     "typography-14 preserve-half-leading wishlists_count">
-                                      1212
+                                      1211
                                     </div>
                                   </div></a>
                                 </div>
@@ -412,9 +412,10 @@
     <footer class="footer__menu bg-white">
       <div class=
       "desktop:flex desktop:justify-between desktop:mx-auto desktop:text-center desktop:max-w-[1224px] desktop:my-24 desktop:px-16 mobile:gap-16 mobile:grid mobile:grid-cols-2 mobile:m-16">
-        <a href=
-        "https://booth.pm/anshin_booth_pack_guides"><img srcset=
-        "https://asset.booth.pm/assets/banner-anshin_booth_pack@2x-fcabcd0e43382f4dc4a297dd15a695c9a7041541c945b15d5d8da6315952095a.png 2x"
+        <a href="https://booth.fanbox.cc/posts/6374573"><img alt=
+        "ピクシブかんたん決済のご利用方法" class="align-bottom w-full" width="176"
+        height="72" src=
+        "https://asset.booth.pm/assets/banner-minna_no_ginko_footer-558af5dbd3da52c330c9263a270923d2f773e612606d9c248942b779c9ed541a.jpg"></a><a href="https://booth.pm/anshin_booth_pack_guides"><img srcset="https://asset.booth.pm/assets/banner-anshin_booth_pack@2x-fcabcd0e43382f4dc4a297dd15a695c9a7041541c945b15d5d8da6315952095a.png 2x"
         alt="匿名配送であんしん！あんしんBOOTH便" class="align-bottom w-full"
         width="176" height="72" src=
         "https://asset.booth.pm/assets/banner-anshin_booth_pack-14540be4805dc22307b8c1341662093cca5d0f3d885daf80a896ca7c32e0596f.png"></a><a target="_blank"
