--- a/VRChat/38/1324338.html
+++ b/VRChat/38/1324338.html
@@ -81,7 +81,7 @@
     <script src=
     "https://asset.booth.pm/assets/23738a784829eea36de7.js" defer=
     "defer" nonce=
-    "vXo+dAgoUjnnA0ZSSEdzzq98Ea42icZaKUfNVfMEnf0="></script>
+    "YyYc/MVnWD0GTdxEXJT4v1ghftSw4Uva/Fp96T54eQE="></script>
     <script type="application/ld+json">
     {"@context":"https://schema.org","@type":"Product","name":"MCF GA9 パニッシャーピストル","description":"【製品内容】\n・UnityPackage\n・利用規約\n\n【説明】\n浄化の紋章により強化された Guramaton Accuracy 9\nA9シリーズ初の悪魔祓い用の拳銃である。\nセミ/フルオートの切り替えが可能。スタビライザーには十字が刻まれており発射炎が十字になる。A9シリーズの中でも精密な射撃が可能なモデルだが、同時に近接武器としても調整されておりこの銃でいくら殴打しても歪むことはない。\nこの銃を携行する悪魔祓い達は特殊な戦闘技法を身に着けているとされ、一説によると二挺拳銃を使用するとか。「敵の目の前に姿を晒しながら戦う」とも言われている。何でも体術と銃撃を組み合わせた特殊な型を使用するとの情報もあるが詳細は不明。\n\nSSは #MCF_VRC をつけてツイートしてくれると私が喜びます。\n\n2DViewテクスチャ付属\nカラーバリエーション4色\nボーン・シェイプキー付き\n\nポリ数\nGA9:3656\nマガジン:352\n\n\n\n\n\n【免責事項】\n当モデルを使用した際、使用者側にいかなる不利益が発生した場合でも当方は一切責任を負いません。\n\n【禁止事項】\n・再配布（ゲームに組み込む・VRCのペデスタル等は許可）\n・政治的、差別的な用途への利用、又は過去にそのような用途に扱われた経歴のあるキャラクターへの利用","url":"https://booth.pm/ja/items/1324338","offers":{"priceCurrency":"JPY","@type":"Offer","price":"1000"},"image":"https://booth.pximg.net/c/620x620/41721053-8f32-4b87-9b48-5fda7552cf1a/i/1324338/61500adb-a6eb-43b2-a7cd-fa1c5577479d_base_resized.jpg"}
     </script>
@@ -95,7 +95,7 @@
     "//www.googletagmanager.com/ns.html?id=GTM-WLLNDM" style=
     "display:none;visibility:hidden" width="0"></iframe></noscript>
     <script src="https://asset.booth.pm/google_tag_manager_ad.js"
-    nonce="vXo+dAgoUjnnA0ZSSEdzzq98Ea42icZaKUfNVfMEnf0="></script>
+    nonce="YyYc/MVnWD0GTdxEXJT4v1ghftSw4Uva/Fp96T54eQE="></script>
     <div class="service-informations">
       <div class="promotion-banner"></div>
     </div>
@@ -170,7 +170,7 @@
                                   "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                                     <div class=
                                     "typography-14 preserve-half-leading wishlists_count">
-                                      127
+                                      128
                                     </div>
                                   </div></a><a class=
                                   "remove-from-wish-list no-underline !text-current"
@@ -186,7 +186,7 @@
                                   "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                                     <div class=
                                     "typography-14 preserve-half-leading wishlists_count">
-                                      127
+                                      128
                                     </div>
                                   </div></a>
                                 </div>
@@ -457,9 +457,10 @@
     <footer class="footer__menu bg-white">
       <div class=
       "desktop:flex desktop:justify-between desktop:mx-auto desktop:text-center desktop:max-w-[1224px] desktop:my-24 desktop:px-16 mobile:gap-16 mobile:grid mobile:grid-cols-2 mobile:m-16">
-        <a href=
-        "https://booth.pm/anshin_booth_pack_guides"><img srcset=
-        "https://asset.booth.pm/assets/banner-anshin_booth_pack@2x-fcabcd0e43382f4dc4a297dd15a695c9a7041541c945b15d5d8da6315952095a.png 2x"
+        <a href="https://booth.fanbox.cc/posts/6374573"><img alt=
+        "ピクシブかんたん決済のご利用方法" class="align-bottom w-full" width="176"
+        height="72" src=
+        "https://asset.booth.pm/assets/banner-minna_no_ginko_footer-558af5dbd3da52c330c9263a270923d2f773e612606d9c248942b779c9ed541a.jpg"></a><a href="https://booth.pm/anshin_booth_pack_guides"><img srcset="https://asset.booth.pm/assets/banner-anshin_booth_pack@2x-fcabcd0e43382f4dc4a297dd15a695c9a7041541c945b15d5d8da6315952095a.png 2x"
         alt="匿名配送であんしん！あんしんBOOTH便" class="align-bottom w-full"
         width="176" height="72" src=
         "https://asset.booth.pm/assets/banner-anshin_booth_pack-14540be4805dc22307b8c1341662093cca5d0f3d885daf80a896ca7c32e0596f.png"></a><a target="_blank"
